Adding some comments for Task 2

--- a/src/assignment.ipynb
+++ b/src/assignment.ipynb
@@ -1883,20 +1883,13 @@
    "metadata": {},
    "source": [
     "### Dataset overview\n",
-    "○ What are the categories/domains of the dataset?  \n",
-    "○ What is the dataset size of each variation?  \n",
-    "○ What is dataset structure/format?  \n",
-    "○ What are attributes/features of review data you are going to use?  \n",
-    "○ What are attributes/features of product data you are going to use?  \n",
-    "○ Which parts of the dataset will you use or all of them?  \n",
+    "< Will copy paste from documentation >\n",
     "\n",
     "### Data preperation and preprosessing\n",
-    "\n",
-    "How did you load, noramlize and clean the data?\n",
+    "< Will copy paste from documentation >\n",
     "\n",
     "### Hypothesis\n",
-    "\n",
-    "What do we expect will be the outcome of our analysis?\n",
+    "< Will copy paste from documentation >\n",
     "\n"
    ]
   },
@@ -1905,6 +1898,63 @@
    "metadata": {},
    "source": [
     "## Part 2 - Data Analysis and Interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Job metadata\n",
+    "Extract the relevant information to describe the job’s\n",
+    "attributes.\n",
+    "For example:\n",
+    "- What is the sector, sub-sector of each job?\n",
+    "- Where is the location of the job?\n",
+    "- Which is the range of salaries for each job?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Market by location\n",
+    "For example:\n",
+    "- What is the market size in each city? Which are the hottest job sectors in\n",
+    "each city?\n",
+    "- Which range of salary is common in each city? Where are the employees\n",
+    "more well-paid?\n",
+    "- Can you detect the pattern of posting: e.g. are more jobs posted at the\n",
+    "beginning of month?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Market by sectors\n",
+    "For example:\n",
+    "- Which sectors keep the highest market share?\n",
+    "- In each sector, which sub-sectors are the main spotlights?\n",
+    "- What is the salary range for each sector/sub-sector? Can you compare salary\n",
+    "range between sectors/subsectors?\n",
+    "- What is the trending of market i.e. if a high school student ask you which\n",
+    "subject should he/she learn in the university (to guarantee a job in a future),\n",
+    "what is your advice?\n",
+    "- Can you detect which skills are required in each sector?"
    ]
   },
   {
