added commenting to code

--- a/src/assignment.ipynb
+++ b/src/assignment.ipynb
@@ -347,34 +347,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\"\\n# Changing ID datatype\\n\\n# Some IDs have not been entered correctly, eg: \\'37915260&searchrequesttoken=e859cc74-e22f-498d-ac7c-77a7e1b45676\\'\\n# Need to trim the first 8 characters before converting to int\\n\\ndf[\\'Id\\'] = df[\\'Id\\'].str[:8].astype(\\'int64\\')\\n'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Seems like removing the IDs reveals a bunch of duplicate data so I've just commented this out for now.\n",
-    "\"\"\"\"\n",
-    "# Changing ID datatype\n",
-    "\n",
-    "# Some IDs have not been entered correctly, eg: '37915260&searchrequesttoken=e859cc74-e22f-498d-ac7c-77a7e1b45676'\n",
-    "# Need to trim the first 8 characters before converting to int\n",
-    "\n",
-    "df['Id'] = df['Id'].str[:8].astype('int64')\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -3591,8 +3563,8 @@
     }
    ],
    "source": [
+    "# Use range of frequency histograms to understand posting frequency clearer\n",
     "fig, axs = plt.subplots(1, 2, figsize=(15, 5), sharey=True, tight_layout=True)\n",
-    "\n",
     "axs[0].hist(dates_df['day'], bins=4)\n",
     "axs[0].set_title('4 Bin - Frequency', fontsize=20)\n",
     "axs[0].set_xlabel('Days within Month')\n",
@@ -3601,13 +3573,15 @@
     "axs[1].set_title('6 Bin - Frequency', fontsize=20)\n",
     "axs[1].set_xlabel('Days within Month')\n",
     "axs[1].set_ylabel('Number of Job Postings')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3734,6 +3708,8 @@
     }
    ],
    "source": [
+    "# Apply some predictive analysis to job posting frequency\n",
+    "# Create new df\n",
     "month_freq = dates_df.groupby(\"month\")['month'].value_counts().tolist()\n",
     "month_freq.append(np.nan)\n",
     "month_freq.append(np.nan)\n",
@@ -3890,6 +3866,7 @@
     }
    ],
    "source": [
+    "# plot the 3 month moving average\n",
     "plt.plot(pred_df['months'],pred_df['posts'],label=\"Actual\", color=\"Blue\", marker='o')\n",
     "plt.plot(pred_df['months'],pred_df['3MMA'],label='3 Month Moving Average', color=\"Green\", marker='o')\n",
     "plt.xlabel('Period')\n",
@@ -4027,6 +4004,7 @@
     }
    ],
    "source": [
+    "# apply some exponential smoothing with alpha values of 0.2 and 0.8\n",
     "for i in range(0,pred_df.shape[0]-3):\n",
     "    pred_df.loc[pred_df.index[i+1],'a=0.8'] = np.round((pred_df.iloc[i,2])+ 0.8*((pred_df.iloc[i,1])-(pred_df.iloc[i,2])),1)\n",
     "for i in range(0,pred_df.shape[0]-3):\n",
@@ -4064,6 +4042,7 @@
     }
    ],
    "source": [
+    "# plot the exponentially smoothed values\n",
     "plt.plot(pred_df['months'],pred_df['posts'],label=\"Actual\", color=\"Blue\", marker='o')\n",
     "plt.plot(pred_df['months'],pred_df['a=0.2'],label='a = 0.2', color=\"Green\", marker='o')\n",
     "plt.plot(pred_df['months'],pred_df['a=0.8'],label='a = 0.8', color=\"Red\", marker='o')\n",
@@ -4092,10 +4071,10 @@
     }
    ],
    "source": [
+    "# look at indivudual job listings to notice any day-to-day trends\n",
     "df['Date'].value_counts().plot(x='Date', marker='o', figsize=(15,10), linewidth=2,colormap='Set2')\n",
     "plt.title(\"Job listing frequency over time\", fontsize=30)\n",
     "plt.xlabel('Date', fontsize=15)\n",
-    "\n",
     "plt.ylabel('No. of Job postings',fontsize=15)\n",
     "plt.show()"
    ]
@@ -5163,7 +5142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
